# Generated by Django 5.2 on 2025-04-26 18:28

from django.db import migrations, models


class Migration(migrations.Migration):

    initial = True

    dependencies = [
    ]

    operations = [
        migrations.CreateModel(
            name='CounterParty',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=200)),
                ('cif_number', models.CharField(max_length=50, unique=True)),
                ('country_of_risk', models.CharField(max_length=100)),
                ('business_description', models.TextField(blank=True, null=True)),
                ('has_guarantor', models.BooleanField(default=False)),
                ('guarantor_details', models.TextField(blank=True, null=True)),
                ('rating_current', models.CharField(blank=True, max_length=10, null=True)),
                ('rating_previous', models.CharField(blank=True, max_length=10, null=True)),
                ('sp_rating', models.CharField(blank=True, max_length=10, null=True)),
                ('moodys_rating', models.CharField(blank=True, max_length=10, null=True)),
                ('fitch_rating', models.CharField(blank=True, max_length=10, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
            options={
                'verbose_name': 'Counterparty',
                'verbose_name_plural': 'Counterparties',
            },
        ),
        migrations.CreateModel(
            name='CreditAnalysis',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('analysis', models.TextField()),
                ('is_draft', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
        ),
        migrations.CreateModel(
            name='CreditLimit',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('existing_limit_amount', models.DecimalField(blank=True, decimal_places=2, max_digits=15, null=True)),
                ('existing_tenor_months', models.PositiveIntegerField(blank=True, null=True)),
                ('proposed_limit_amount', models.DecimalField(decimal_places=2, max_digits=15)),
                ('proposed_tenor_months', models.PositiveIntegerField()),
            ],
        ),
        migrations.CreateModel(
            name='CreditPaper',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('content', models.TextField()),
                ('is_draft', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
        ),
        migrations.CreateModel(
            name='CreditQuestionnaire',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('content', models.TextField()),
                ('is_draft', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
        ),
        migrations.CreateModel(
            name='CreditRequest',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('request_number', models.CharField(max_length=20, unique=True)),
                ('title', models.CharField(blank=True, max_length=200, null=True)),
                ('description', models.TextField(blank=True, null=True)),
                ('da_level', models.PositiveSmallIntegerField(blank=True, null=True)),
                ('questionnaire_required', models.BooleanField(default=False)),
                ('credit_review_notes', models.TextField(blank=True, null=True)),
                ('priority', models.CharField(choices=[('Low', 'Low'), ('Medium', 'Medium'), ('High', 'High')], max_length=6)),
                ('required_by_date', models.DateField()),
                ('priority_justification', models.TextField(blank=True, null=True)),
                ('revenue_last_12m', models.DecimalField(decimal_places=2, max_digits=15)),
                ('projected_revenue', models.DecimalField(decimal_places=2, max_digits=15)),
                ('projected_rorwa_percentage', models.DecimalField(decimal_places=2, max_digits=5)),
                ('country_risk_limit_confirmed', models.BooleanField(default=False)),
                ('client_introduction_details', models.TextField()),
                ('kyc_approval_status', models.CharField(max_length=50)),
                ('senior_client_contact', models.CharField(max_length=100)),
                ('last_client_visit_date', models.DateField()),
                ('has_legal_opinion', models.BooleanField(default=False)),
                ('financial_statements_received', models.BooleanField(default=False)),
                ('interim_financials_info', models.TextField(blank=True, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
                ('submitted_at', models.DateTimeField()),
                ('completed_at', models.DateTimeField(blank=True, null=True)),
            ],
        ),
        migrations.CreateModel(
            name='Document',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('file', models.FileField(upload_to='credit_documents/%Y/%m/%d/')),
                ('uploaded_at', models.DateTimeField(auto_now_add=True)),
            ],
        ),
        migrations.CreateModel(
            name='LegalReview',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('comments', models.TextField()),
                ('is_draft', models.BooleanField(default=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
        ),
        migrations.CreateModel(
            name='LimitType',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('name', models.CharField(max_length=100)),
                ('code', models.CharField(max_length=50)),
                ('description', models.TextField(blank=True, null=True)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
                ('updated_at', models.DateTimeField(auto_now=True)),
            ],
        ),
        migrations.CreateModel(
            name='Notification',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('type', models.CharField(choices=[('workflow', 'Workflow'), ('document', 'Document'), ('reminder', 'Reminder'), ('other', 'Other')], max_length=32)),
                ('content', models.TextField()),
                ('link', models.URLField(blank=True, null=True)),
                ('read', models.BooleanField(default=False)),
                ('dismissed', models.BooleanField(default=False)),
                ('created_at', models.DateTimeField(auto_now_add=True)),
            ],
            options={
                'ordering': ['-created_at'],
            },
        ),
        migrations.CreateModel(
            name='NotificationPreference',
            fields=[
                ('id', models.BigAutoField(auto_created=True, primary_key=True, serialize=False, verbose_name='ID')),
                ('type', models.CharField(choices=[('workflow', 'Workflow'), ('document', 'Document'), ('reminder', 'Reminder'), ('other', 'Other')], max_length=32)),
                ('enabled', models.BooleanField(default=True)),
            ],
        ),
    ]
